<?xml version="1.0" encoding="UTF-8"?>
<!--
  ~ Copyright (c) 2019 Zavarov
  ~
  ~ This program is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ This program is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with this program.  If not, see <http://www.gnu.org/licenses/>.
  -->

<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>vartas.monticore-commons</groupId>
    <artifactId>monticore-commons</artifactId>
    <packaging>pom</packaging>
    <version>1.8</version>
    <modules>
        <module>core</module>
        <module>numbers</module>
        <module>discord</module>
        <module>reddit</module>
        <module>chart</module>
        <module>discord-bot</module>
        <module>discord-command</module>
        <module>discord-call</module>
        <module>aggregated-discord-command</module>
    </modules>

    <properties>
        <!-- .. Libraries ..................................................... -->

        <monticore.version>6.0.0</monticore.version>
        <commons-text.version>1.8</commons-text.version>
        <evo.inflector.version>1.2.2</evo.inflector.version>
        <reddit.version>2.4</reddit.version>
        <chart.version>1.1.8</chart.version>
        <discord.bot.version>3.4</discord.bot.version>

        <assertj.version>3.12.2</assertj.version>
        <junit.version>4.12</junit.version>

        <!-- .. Dependency Management........................................... -->
        <guava.management.version>23.0</guava.management.version>

        <!-- .. Plugins......................................................... -->

        <maven-javadoc-plugin.version>3.1.1</maven-javadoc-plugin.version>
        <maven-jar-plugin.version>3.1.2</maven-jar-plugin.version>
        <maven-source-plugin.version>3.1.0</maven-source-plugin.version>


        <!-- .. Misc .......................................................... -->

        <java.version>11</java.version>
        <wagon.provider.version>2.6</wagon.provider.version>

        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>

        <maven.compiler.source>11</maven.compiler.source>
        <maven.compiler.target>11</maven.compiler.target>

        <!-- Classifiers -->

        <grammars.classifier>grammars</grammars.classifier>
    </properties>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>com.google.guava</groupId>
                <artifactId>guava</artifactId>
                <version>${guava.management.version}</version>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <dependencies>
        <!-- MontiCore Dependencies -->

        <dependency>
            <groupId>de.monticore</groupId>
            <artifactId>monticore-runtime</artifactId>
            <version>${monticore.version}</version>
        </dependency>

        <dependency>
            <groupId>de.monticore</groupId>
            <artifactId>monticore-grammar</artifactId>
            <version>${monticore.version}</version>
        </dependency>

        <dependency>
            <groupId>de.monticore</groupId>
            <artifactId>monticore-generator</artifactId>
            <version>${monticore.version}</version>
        </dependency>

        <dependency>
            <groupId>de.monticore</groupId>
            <artifactId>monticore-grammar</artifactId>
            <version>${monticore.version}</version>
            <classifier>${grammars.classifier}</classifier>
            <scope>provided</scope>
        </dependency>

        <!-- Test Libraries         -->

        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <version>${junit.version}</version>
            <scope>test</scope>
        </dependency>

        <dependency>
            <groupId>org.assertj</groupId>
            <artifactId>assertj-core</artifactId>
            <version>${assertj.version}</version>
            <scope>test</scope>
        </dependency>
    </dependencies>

    <!-- == Repositories ==================================================== -->

    <repositories>
        <repository>
            <id>se-nexus</id>
            <url>https://nexus.se.rwth-aachen.de/content/groups/public/</url>
        </repository>

        <repository>
            <id>jcenter</id>
            <name>jcenter-bintray</name>
            <url>http://jcenter.bintray.com</url>
        </repository>
    </repositories>

    <pluginRepositories>
        <pluginRepository>
            <id>se-nexus</id>
            <url>https://nexus.se.rwth-aachen.de/content/groups/public/</url>
        </pluginRepository>
    </pluginRepositories>



    <!-- == DEFAULT BUILD SETTINGS =========================================== -->

    <build>
        <plugins>
            <!-- create grammar & template jar -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-jar-plugin</artifactId>
                <version>${maven-jar-plugin.version}</version>
                <executions>
                    <!-- grammars -->
                    <execution>
                        <id>generate-grammars</id>
                        <phase>package</phase>
                        <goals>
                            <goal>jar</goal>
                        </goals>
                        <configuration>
                            <classifier>${grammars.classifier}</classifier>
                            <classesDirectory>src/main/grammars</classesDirectory>
                        </configuration>
                    </execution>
                    <!-- templates -->
                    <execution>
                        <id>generate-templates</id>
                        <phase>package</phase>
                        <goals>
                            <goal>jar</goal>
                        </goals>
                        <configuration>
                            <classifier>templates</classifier>
                            <classesDirectory>src/main/resources/templates</classesDirectory>
                        </configuration>
                    </execution>
                </executions>
            </plugin>

            <!-- create sources jar -->
            <plugin>
                <artifactId>maven-source-plugin</artifactId>
                <version>${maven-source-plugin.version}</version>
                <executions>
                    <execution>
                        <id>generate-sources</id>
                        <goals>
                            <goal>jar</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>

            <!-- create docs jar -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-javadoc-plugin</artifactId>
                <version>${maven-javadoc-plugin.version}</version>
                <executions>
                    <execution>
                        <id>generate-docs</id>
                        <goals>
                            <goal>jar</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>

</project>
